--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>{% block title %} Herotek Co {% endblock title %}</title>
+{% include 'snippets/css.html' %}
 </head>
 <body>
-<h1> Herotek.ir </h1>
+{% include 'snippets/nav.html' %}
 <div class="container">
 {% block content %}
 {% endblock content %}
 </div>
+
+{% include 'snippets/js.html' %}
+
 </body>
 </html>
