--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Welcome || {{ block.super }} {% endblock title %}
 {% block content %}
 <h3>Hello LOL</h3>
 <p> this new shit {{html_var}} </p>
