--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -1,13 +1,26 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Herotek</a>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#"><img src="http://via.placeholder.com/150x30" width="180" height="40" class="d-inline-block align-top" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
+    <ul class="navbar-nav ">
+      <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
+      </li>
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Servises
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Web Development</a>
+          <a class="dropdown-item" href="#">App Development</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about/">Pricing</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/about/">About</a>
@@ -15,6 +28,10 @@
       <li class="nav-item">
         <a class="nav-link" href="/contact/">Contact</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/restaurants/">List</a>
+      </li>
+
     </ul>
   </div>
 </nav>
