--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 {% block content %}
 {% endblock content %}
 </div>
-
+{% include 'snippets/footer.html' %}
 {% include 'snippets/js.html' %}
 
 </body>
