--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 {% include 'snippets/nav.html' %}
-<div class="container">
+<div class="container-fluid">
 {% block content %}
 {% endblock content %}
 </div>
