--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,4 +1,2 @@
-<div class="container fixed-bottom bg-light">
-<h6 class="text-center">Power by Django & Python</h6>
-    <p class="text-center">© All Resived for herotek Co . </p>
-</div>
+
+<h6 class="text-center">Power by Django & Python © All Resived for HEROTEK</h6>
