--- a/templates/snippets/css.html
+++ b/templates/snippets/css.html
@@ -1,1 +1,12 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" media="all">
+
+<style>
+    .hvr-wobble-top{
+        display: block; !important;
+    }
+
+    .hvr-shutter-out-vertical{
+        display: block; !important;
+    }
+</style>
