--- a/restaurants/templates/restaurants/restaurantlocation_list.html
+++ b/restaurants/templates/restaurants/restaurantlocation_list.html
@@ -6,7 +6,7 @@
 
 <ul>
 {% for obj in object_list %}
-    <li>{{ obj }} - {{ obj.name }} - {{ obj.location }} - {{ obj.category }} - {{ obj.timestamp }} - {{ obj.updated }}</li>
+    <li><a href="/restaurants/{{ obj.slug }}/" {{ obj }} <br> - {{ obj.name }} - {{ obj.location }} - {{ obj.category }} - {{ obj.timestamp }} - {{ obj.updated }}</li>
 {% endfor %}
 </ul>
 {% endblock content %}
