--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,2 +1,2 @@
 
-<h6 class="text-center">Power by Django & Python © All Resived for HEROTEK</h6>
+<h6 class="text-center">Power by Django & Python 🕶 © All Resived for HEROTEK</h6>
