--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -31,6 +31,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/restaurants/">List</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/restaurants/create">create</a>
+      </li>
 
     </ul>
   </div>
